--- a/back/package.json
+++ b/back/package.json
@@ -9,7 +9,8 @@
     "author": "wilder",
     "dependencies": {
         "body-parser": "^1.18.2",
-        "express": "^4.16.3",
-        "morgan": "^1.9.0"
+        "express": "^4.16.4",
+        "morgan": "^1.9.0",
+        "mysql": "^2.16.0"
     }
 }
